Configured for my ESP8266 + TFT hardware setup

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,19 +12,7 @@
 ; =========================================================
 
 [platformio]
-
-; Source files to build:
-; - Path to main application code or
-;   one of the GUIslice examples to run
-;
-;src_dir = examples/arduino/ex01_ard_basic
-;src_dir = examples/arduino/ex02_ard_btn_txt
-src_dir = examples/arduino/ex04_ard_ctrls
-;src_dir = examples/arduino/ex07_ard_slider
-;src_dir = ...
-
-; Extra config:
-; - PlatformIO config to build from project root
+src_dir = src/application
 lib_dir = .
 
 ; Default environments to load
@@ -79,6 +67,7 @@ lib_deps =
 	adafruit/Adafruit STMPE610
 build_flags =
 
+
 ; ---------------------------------------------------------
 ; Display: prenticedavid/MCUFRIEND_kbv
 ; ---------------------------------------------------------
@@ -119,14 +108,13 @@ lib_deps =
 ; - You must use "-DUSER_SETUP_LOADED=1" here to disable the
 ;   default config files within TFT_eSPI from being used.
 build_flags =
-	-D USER_SETUP_LOADED=1
 	-D ILI9341_DRIVER
-	-D TFT_CS=15
-	-D TFT_DC=33
+	-D TFT_CS=8
+	-D TFT_DC=4
 	-D TFT_RST=-1
-	-D TFT_MOSI=18
+	-D TFT_MOSI=7
 	-D TFT_SCLK=5
-	-D TOUCH_CS=32
+	-D TOUCH_CS=2
 	-D LOAD_GLCD
 	-D LOAD_FONT2
 	-D LOAD_FONT4
@@ -139,6 +127,7 @@ build_flags =
 	-D SPI_READ_FREQUENCY=20000000
 	-D SPI_TOUCH_FREQUENCY=2500000
 	-D SUPPORT_TRANSACTIONS
+
 
 ; ---------------------------------------------------------
 ; Display: M5stack/m5stack
@@ -232,6 +221,18 @@ extends = upload-avrisp
 platform = espressif32
 board = featheresp32
 framework = arduino
+
+
+; ---------------------------------------------------------
+; MCU: ESP8266
+; - Includes:
+;   - Nodemcu V2
+; ---------------------------------------------------------
+[mcu-ESP8266]
+platform = espressif8266
+board = nodemcuv2
+framework = arduino
+upload_speed = 921600
 
 ; ---------------------------------------------------------
 ; MCU: M5Stack (ESP32)
@@ -396,6 +397,43 @@ build_flags =
 	-D USER_CONFIG_LOADED=1
 	-D USER_CONFIG_INC_FILE=1
 	-D USER_CONFIG_INC_FNAME=\"../configs/esp-shld-m5stack.h\"
+
+
+[env:ESP8266-TFT_eSPI-XPT2046]
+extends = mcu-ESP8266
+lib_deps = 
+	${disp-TFT_eSPI.lib_deps}
+	${touch-XPT2046_ps.lib_deps}
+	ricki-z/SDS011 sensor Library@^0.0.8
+	bodmer/TFT_eFEX@^0.0.8
+	bodmer/JPEGDecoder@^1.8.1
+build_flags = 
+	${common.build_flags}
+	${disp-TFT_eSPI.build_flags}
+	${touch-XPT2046_ps.build_flags}
+	-D USER_CONFIG_LOADED=1
+	-D USER_CONFIG_INC_FILE=1
+	-D USER_CONFIG_INC_FNAME=\"../configs/esp-tftespi-default-xpt2046.h\"
+	-D GSLC_BMP_TRANS_EN=1
+	-D GSLC_BMP_TRANS_RGB=0xFF,0x00,0xFF
+	; Undefine some settings so we can override
+;	-U ADATOUCH_PIN_YP
+;	-U ADATOUCH_PIN_XM
+;	-U ADATOUCH_PIN_YM
+;	-U ADATOUCH_PIN_XP
+;	-U ADATOUCH_X_MIN
+;	-U ADATOUCH_X_MAX
+;	-U ADATOUCH_Y_MIN
+;	-U ADATOUCH_Y_MAX
+; Provide new pinout & calibration
+;	-D ADATOUCH_PIN_YP = A1
+;	-D ADATOUCH_PIN_XM = A2
+;	-D ADATOUCH_PIN_YM = 7 
+;	-D ADATOUCH_PIN_XP = 6 
+;	-D ADATOUCH_X_MIN = 145
+;	-D ADATOUCH_X_MAX = 905
+;	-D ADATOUCH_Y_MIN = 937
+;	-D ADATOUCH_Y_MAX = 165
 
 ; ---------------------------------------------------------
 ; PlatformIO Custom GUIslice Environment
