--- a/platformio.ini
+++ b/platformio.ini
@@ -119,12 +119,9 @@ framework = arduino
 [mcu-ESP8266]
 platform = espressif8266
 board = nodemcuv2
-; change microcontroller
 board_build.mcu = esp8266
 framework = arduino
 upload_speed = 921600
-; change from default MMU setup (32KB cache + 32KB IRAM) to 1M External 64 MBit PSRAM
-; Enable exceptions
 build_flags = 
 	-D PIO_FRAMEWORK_ARDUINO_MMU_EXTERNAL_1024K
 	-D PIO_FRAMEWORK_ARDUINO_ENABLE_EXCEPTIONS
@@ -146,6 +143,7 @@ lib_deps =
 	${disp-ILI9341.lib_deps}
 	${touch-STMPE610.lib_deps}
 	adafruit/Adafruit GFX Library@^1.11.3
+	adafruit/Adafruit BusIO@^1.13.2
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341.build_flags}
@@ -160,6 +158,7 @@ lib_deps =
 	${disp-ILI9341.lib_deps}
 	${touch-FT6206.lib_deps}
 	adafruit/Adafruit GFX Library@^1.11.3
+	adafruit/Adafruit BusIO@^1.13.2
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341.build_flags}
@@ -173,6 +172,7 @@ extends = mcu-Arduino
 lib_deps = 
 	${disp-mcufriend.lib_deps}
 	adafruit/Adafruit GFX Library@^1.11.3
+	adafruit/Adafruit BusIO@^1.13.2
 build_flags = 
 	${common.build_flags}
 	${disp-mcufriend.build_flags}
@@ -186,6 +186,7 @@ lib_deps =
 	${disp-mcufriend.lib_deps}
 	${touch-4wire.lib_deps}
 	adafruit/Adafruit GFX Library@^1.11.3
+	adafruit/Adafruit BusIO@^1.13.2
 build_flags = 
 	${common.build_flags}
 	${disp-mcufriend.build_flags}
@@ -199,6 +200,7 @@ extends = mcu-Teensy
 lib_deps = 
 	${disp-ILI9341_t3.lib_deps}
 	adafruit/Adafruit GFX Library@^1.11.3
+	adafruit/Adafruit BusIO@^1.13.2
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341_t3.build_flags}
@@ -212,6 +214,7 @@ lib_deps =
 	${disp-ILI9341_t3.lib_deps}
 	${touch-XPT2046_ps.lib_deps}
 	adafruit/Adafruit GFX Library@^1.11.3
+	adafruit/Adafruit BusIO@^1.13.2
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341_t3.build_flags}
@@ -226,6 +229,7 @@ lib_deps =
 	${disp-TFT_eSPI.lib_deps}
 	${touch-STMPE610.lib_deps}
 	adafruit/Adafruit GFX Library@^1.11.3
+	adafruit/Adafruit BusIO@^1.13.2
 build_flags = 
 	${common.build_flags}
 	${disp-TFT_eSPI.build_flags}
@@ -239,6 +243,7 @@ extends = mcu-M5Stack
 lib_deps = 
 	${disp-M5Stack.lib_deps}
 	adafruit/Adafruit GFX Library@^1.11.3
+	adafruit/Adafruit BusIO@^1.13.2
 build_flags = 
 	${common.build_flags}
 	${disp-M5Stack.build_flags}
@@ -254,6 +259,8 @@ lib_deps =
 	ricki-z/SDS011 sensor Library@^0.0.8
 	bodmer/TFT_eFEX@^0.0.8
 	bodmer/JPEGDecoder@^1.8.1
+	adafruit/Adafruit GFX Library@^1.11.3
+	adafruit/Adafruit BusIO@^1.13.2
 build_flags = 
 	${common.build_flags}
 	${disp-TFT_eSPI.build_flags}
@@ -283,6 +290,7 @@ lib_deps =
 	${disp-ILI9341.lib_deps}
 	${touch-STMPE610.lib_deps}
 	adafruit/Adafruit GFX Library@^1.11.3
+	adafruit/Adafruit BusIO@^1.13.2
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341.build_flags}
