Working with ESP8266 & ESP32

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,9 +11,12 @@
 [platformio]
 src_dir = src/application
 lib_dir = .
+lib_extra_dirs =
+    C:/Users/Marcel/.platformio/packages
+    C:/Users/Marcel/Documents/Arduino/libraries
 
 [env]
-lib_ldf_mode = deep
+lib_ldf_mode = deep+
 build_unflags = 
 
 [common]
@@ -113,8 +116,15 @@ extends = upload-avrisp
 
 [mcu-ESP32]
 platform = espressif32
-board = featheresp32
+board = esp32dev
 framework = arduino
+upload_speed = 921600
+board_build.mcu = esp32
+board_build.filesystem = spiffs
+board_build.f_cpu = 240000000L
+build_flags = 
+	-D PIO_FRAMEWORK_ARDUINO_MMU_EXTERNAL_1024K
+	-D PIO_FRAMEWORK_ARDUINO_ENABLE_EXCEPTIONS
 
 [mcu-ESP8266]
 platform = espressif8266
@@ -122,6 +132,7 @@ board = nodemcuv2
 board_build.mcu = esp8266
 framework = arduino
 upload_speed = 921600
+board_build.flash_mode = dio
 build_flags = 
 	-D PIO_FRAMEWORK_ARDUINO_MMU_EXTERNAL_1024K
 	-D PIO_FRAMEWORK_ARDUINO_ENABLE_EXCEPTIONS
@@ -145,6 +156,7 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.3
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
+	losant/losant-mqtt-arduino@^2.0.1
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341.build_flags}
@@ -161,6 +173,7 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.3
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
+	losant/losant-mqtt-arduino@^2.0.1
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341.build_flags}
@@ -176,6 +189,7 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.3
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
+	losant/losant-mqtt-arduino@^2.0.1
 build_flags = 
 	${common.build_flags}
 	${disp-mcufriend.build_flags}
@@ -191,6 +205,7 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.3
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
+	losant/losant-mqtt-arduino@^2.0.1
 build_flags = 
 	${common.build_flags}
 	${disp-mcufriend.build_flags}
@@ -206,6 +221,7 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.3
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
+	losant/losant-mqtt-arduino@^2.0.1
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341_t3.build_flags}
@@ -221,6 +237,7 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.3
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
+	losant/losant-mqtt-arduino@^2.0.1
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341_t3.build_flags}
@@ -237,6 +254,7 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.3
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
+	losant/losant-mqtt-arduino@^2.0.1
 build_flags = 
 	${common.build_flags}
 	${disp-TFT_eSPI.build_flags}
@@ -252,6 +270,7 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.3
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
+	losant/losant-mqtt-arduino@^2.0.1
 build_flags = 
 	${common.build_flags}
 	${disp-M5Stack.build_flags}
@@ -292,6 +311,40 @@ build_flags =
 	-D GSLC_LOCAL_STR_LEN=30
 	-D DEBUG_ERR=0
 
+
+[env:ESP32-TFT_eSPI-XPT2046]
+extends = mcu-ESP32
+lib_deps = 
+	${disp-TFT_eSPI.lib_deps}
+	${touch-XPT2046_ps.lib_deps}
+	ricki-z/SDS011 sensor Library@^0.0.8
+	bodmer/JPEGDecoder@^1.8.1
+	adafruit/Adafruit GFX Library@^1.11.3
+	adafruit/Adafruit BusIO@^1.13.2
+	https://github.com/MarcelAndreUwe/TFT_eFEX.git#transparent
+build_flags = 
+	${common.build_flags}
+	${disp-TFT_eSPI.build_flags}
+	${touch-XPT2046_ps.build_flags}
+	-D USER_CONFIG_LOADED=1
+	-D USER_CONFIG_INC_FILE=1
+	-D USER_CONFIG_INC_FNAME=\"../configs/esp-tftespi-default-xpt2046.h\"
+	-D GSLC_BMP_TRANS_EN=1
+	-D GSLC_FEATURE_COMPOUND=0
+	-D GSLC_FEATURE_XTEXTBOX_EMBED=0
+	-D GSLC_FEATURE_INPUT=0
+	-D GSLC_SD_EN=0
+	-D GSLC_TOUCH_MAX_EVT=1
+	-D GSLC_SD_BUFFPIXEL=25
+	-D GSLC_CLIP_EN=1
+	-D GSLC_BMP_TRANS_RGB=0xFF,0x00,0xFF
+	-D GSLC_USE_FLOAT=0
+	-D GSLC_DEV_TOUCH=\"\"
+	-D GSLC_USE_PROGMEM=0
+	-D GSLC_LOCAL_STR=0
+	-D GSLC_LOCAL_STR_LEN=30
+	-D DEBUG_ERR=0
+
 [env:CustomConfig]
 extends = mcu-Arduino
 lib_deps = 
@@ -300,6 +353,7 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.3
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
+	losant/losant-mqtt-arduino@^2.0.1
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341.build_flags}
