--- a/platformio.ini
+++ b/platformio.ini
@@ -11,9 +11,9 @@
 [platformio]
 src_dir = src/application
 lib_dir = .
-lib_extra_dirs =
-    C:/Users/Marcel/.platformio/packages
-    C:/Users/Marcel/Documents/Arduino/libraries
+lib_extra_dirs = 
+	C:/Users/Marcel/.platformio/packages
+	C:/Users/Marcel/Documents/Arduino/libraries
 
 [env]
 lib_ldf_mode = deep+
@@ -57,25 +57,7 @@ lib_deps =
 	TFT_eSPI
 	bodmer/TFT_eSPI @ ^2.4.75
 build_flags = 
-	-D ILI9341_DRIVER
-	-D TFT_CS=8
-	-D TFT_DC=4
-	-D TFT_RST=-1
-	-D TFT_MOSI=7
-	-D TFT_SCLK=5
-	-D TOUCH_CS=2
-	-D LOAD_GLCD
-	-D LOAD_FONT2
-	-D LOAD_FONT4
-	-D LOAD_FONT6
-	-D LOAD_FONT7
-	-D LOAD_FONT8
-	-D LOAD_GFXFF
-	-D SMOOTH_FONT
-	-D SPI_FREQUENCY=40000000
-	-D SPI_READ_FREQUENCY=20000000
-	-D SPI_TOUCH_FREQUENCY=2500000
-	-D SUPPORT_TRANSACTIONS
+	
 
 [disp-M5Stack]
 lib_deps = 
@@ -117,14 +99,20 @@ extends = upload-avrisp
 [mcu-ESP32]
 platform = espressif32
 board = esp32dev
+monitor_filters = 
+	- esp32_exception_decoder
 framework = arduino
 upload_speed = 921600
 board_build.mcu = esp32
 board_build.filesystem = spiffs
 board_build.f_cpu = 240000000L
+board_build.partitions = huge_app.csv
 build_flags = 
-	-D PIO_FRAMEWORK_ARDUINO_MMU_EXTERNAL_1024K
-	-D PIO_FRAMEWORK_ARDUINO_ENABLE_EXCEPTIONS
+	-DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
+	-DCORE_DEBUG_LEVEL=5
+#	-D PIO_FRAMEWORK_ARDUINO_MMU_EXTERNAL_1024K
+#	-D PIO_FRAMEWORK_ARDUINO_ENABLE_EXCEPTIONS
 
 [mcu-ESP8266]
 platform = espressif8266
@@ -157,6 +145,7 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
+	fbiego/ESP32Time@^2.0.0
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341.build_flags}
@@ -174,6 +163,7 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
+	fbiego/ESP32Time@^2.0.0
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341.build_flags}
@@ -190,6 +180,7 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
+	fbiego/ESP32Time@^2.0.0
 build_flags = 
 	${common.build_flags}
 	${disp-mcufriend.build_flags}
@@ -206,6 +197,7 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
+	fbiego/ESP32Time@^2.0.0
 build_flags = 
 	${common.build_flags}
 	${disp-mcufriend.build_flags}
@@ -222,6 +214,7 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
+	fbiego/ESP32Time@^2.0.0
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341_t3.build_flags}
@@ -238,6 +231,7 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
+	fbiego/ESP32Time@^2.0.0
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341_t3.build_flags}
@@ -255,6 +249,7 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
+	fbiego/ESP32Time@^2.0.0
 build_flags = 
 	${common.build_flags}
 	${disp-TFT_eSPI.build_flags}
@@ -271,6 +266,7 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
+	fbiego/ESP32Time@^2.0.0
 build_flags = 
 	${common.build_flags}
 	${disp-M5Stack.build_flags}
@@ -288,6 +284,7 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.3
 	adafruit/Adafruit BusIO@^1.13.2
 	https://github.com/MarcelAndreUwe/TFT_eFEX.git#transparent
+	fbiego/ESP32Time@^2.0.0
 build_flags = 
 	${common.build_flags}
 	${disp-TFT_eSPI.build_flags}
@@ -310,7 +307,25 @@ build_flags =
 	-D GSLC_LOCAL_STR=0
 	-D GSLC_LOCAL_STR_LEN=30
 	-D DEBUG_ERR=0
-
+	# following for user_setup.h from tftespi
+	-D USER_SETUP_LOADED=1
+	-D ILI9341_DRIVER
+	-D TFT_CS=PIN_D8
+	-D TFT_DC=PIN_D3
+	-D TFT_RST=-1
+	#-D TOUCH_CS=2
+	-D LOAD_GLCD
+	-D LOAD_FONT2
+	-D LOAD_FONT4
+	-D LOAD_FONT6
+	-D LOAD_FONT7
+	-D LOAD_FONT8
+	-D LOAD_GFXFF
+	-D SMOOTH_FONT
+	-D SPI_FREQUENCY=40000000
+	-D SPI_READ_FREQUENCY=20000000
+	-D SPI_TOUCH_FREQUENCY=2500000
+	-D SUPPORT_TRANSACTIONS
 
 [env:ESP32-TFT_eSPI-XPT2046]
 extends = mcu-ESP32
@@ -322,6 +337,7 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.3
 	adafruit/Adafruit BusIO@^1.13.2
 	https://github.com/MarcelAndreUwe/TFT_eFEX.git#transparent
+	fbiego/ESP32Time@^2.0.0
 build_flags = 
 	${common.build_flags}
 	${disp-TFT_eSPI.build_flags}
@@ -344,6 +360,28 @@ build_flags =
 	-D GSLC_LOCAL_STR=0
 	-D GSLC_LOCAL_STR_LEN=30
 	-D DEBUG_ERR=0
+	# following for user_setup.h from tftespi
+	-D USER_SETUP_LOADED=1
+	-D ILI9341_DRIVER
+	-D TFT_CS=15
+	-D TFT_DC=2
+	-D TFT_RST=-1
+	-D TFT_MOSI=23
+	-D TFT_MISO=19
+	-D TFT_SCLK=18
+	#-D TOUCH_CS=2
+	-D LOAD_GLCD
+	-D LOAD_FONT2
+	-D LOAD_FONT4
+	-D LOAD_FONT6
+	-D LOAD_FONT7
+	-D LOAD_FONT8
+	-D LOAD_GFXFF
+	-D SMOOTH_FONT
+	-D SPI_FREQUENCY=40000000
+	-D SPI_READ_FREQUENCY=20000000
+	-D SPI_TOUCH_FREQUENCY=2500000
+	-D SUPPORT_TRANSACTIONS
 
 [env:CustomConfig]
 extends = mcu-Arduino
@@ -354,6 +392,7 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.13.2
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
+	fbiego/ESP32Time@^2.0.0
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341.build_flags}
