--- a/platformio.ini
+++ b/platformio.ini
@@ -57,7 +57,6 @@ lib_deps =
 	TFT_eSPI
 	bodmer/TFT_eSPI @ ^2.4.75
 build_flags = 
-	
 
 [disp-M5Stack]
 lib_deps = 
@@ -109,10 +108,8 @@ board_build.f_cpu = 240000000L
 board_build.partitions = huge_app.csv
 build_flags = 
 	-DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue
+	-mfix-esp32-psram-cache-issue
 	-DCORE_DEBUG_LEVEL=5
-#	-D PIO_FRAMEWORK_ARDUINO_MMU_EXTERNAL_1024K
-#	-D PIO_FRAMEWORK_ARDUINO_ENABLE_EXCEPTIONS
 
 [mcu-ESP8266]
 platform = espressif8266
@@ -146,6 +143,8 @@ lib_deps =
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
 	fbiego/ESP32Time@^2.0.0
+	adafruit/Adafruit BME280 Library@^2.2.2
+	adafruit/Adafruit Unified Sensor@^1.1.6
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341.build_flags}
@@ -164,6 +163,8 @@ lib_deps =
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
 	fbiego/ESP32Time@^2.0.0
+	adafruit/Adafruit BME280 Library@^2.2.2
+	adafruit/Adafruit Unified Sensor@^1.1.6
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341.build_flags}
@@ -181,6 +182,8 @@ lib_deps =
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
 	fbiego/ESP32Time@^2.0.0
+	adafruit/Adafruit BME280 Library@^2.2.2
+	adafruit/Adafruit Unified Sensor@^1.1.6
 build_flags = 
 	${common.build_flags}
 	${disp-mcufriend.build_flags}
@@ -198,6 +201,8 @@ lib_deps =
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
 	fbiego/ESP32Time@^2.0.0
+	adafruit/Adafruit BME280 Library@^2.2.2
+	adafruit/Adafruit Unified Sensor@^1.1.6
 build_flags = 
 	${common.build_flags}
 	${disp-mcufriend.build_flags}
@@ -215,6 +220,8 @@ lib_deps =
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
 	fbiego/ESP32Time@^2.0.0
+	adafruit/Adafruit BME280 Library@^2.2.2
+	adafruit/Adafruit Unified Sensor@^1.1.6
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341_t3.build_flags}
@@ -232,6 +239,8 @@ lib_deps =
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
 	fbiego/ESP32Time@^2.0.0
+	adafruit/Adafruit BME280 Library@^2.2.2
+	adafruit/Adafruit Unified Sensor@^1.1.6
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341_t3.build_flags}
@@ -250,6 +259,8 @@ lib_deps =
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
 	fbiego/ESP32Time@^2.0.0
+	adafruit/Adafruit BME280 Library@^2.2.2
+	adafruit/Adafruit Unified Sensor@^1.1.6
 build_flags = 
 	${common.build_flags}
 	${disp-TFT_eSPI.build_flags}
@@ -267,6 +278,8 @@ lib_deps =
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
 	fbiego/ESP32Time@^2.0.0
+	adafruit/Adafruit BME280 Library@^2.2.2
+	adafruit/Adafruit Unified Sensor@^1.1.6
 build_flags = 
 	${common.build_flags}
 	${disp-M5Stack.build_flags}
@@ -285,6 +298,8 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.13.2
 	https://github.com/MarcelAndreUwe/TFT_eFEX.git#transparent
 	fbiego/ESP32Time@^2.0.0
+	adafruit/Adafruit BME280 Library@^2.2.2
+	adafruit/Adafruit Unified Sensor@^1.1.6
 build_flags = 
 	${common.build_flags}
 	${disp-TFT_eSPI.build_flags}
@@ -307,13 +322,11 @@ build_flags =
 	-D GSLC_LOCAL_STR=0
 	-D GSLC_LOCAL_STR_LEN=30
 	-D DEBUG_ERR=0
-	# following for user_setup.h from tftespi
 	-D USER_SETUP_LOADED=1
 	-D ILI9341_DRIVER
 	-D TFT_CS=PIN_D8
 	-D TFT_DC=PIN_D3
 	-D TFT_RST=-1
-	#-D TOUCH_CS=2
 	-D LOAD_GLCD
 	-D LOAD_FONT2
 	-D LOAD_FONT4
@@ -338,6 +351,8 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.13.2
 	https://github.com/MarcelAndreUwe/TFT_eFEX.git#transparent
 	fbiego/ESP32Time@^2.0.0
+	adafruit/Adafruit BME280 Library@^2.2.2
+	adafruit/Adafruit Unified Sensor@^1.1.6
 build_flags = 
 	${common.build_flags}
 	${disp-TFT_eSPI.build_flags}
@@ -360,7 +375,6 @@ build_flags =
 	-D GSLC_LOCAL_STR=0
 	-D GSLC_LOCAL_STR_LEN=30
 	-D DEBUG_ERR=0
-	# following for user_setup.h from tftespi
 	-D USER_SETUP_LOADED=1
 	-D ILI9341_DRIVER
 	-D TFT_CS=15
@@ -369,7 +383,6 @@ build_flags =
 	-D TFT_MOSI=23
 	-D TFT_MISO=19
 	-D TFT_SCLK=18
-	#-D TOUCH_CS=2
 	-D LOAD_GLCD
 	-D LOAD_FONT2
 	-D LOAD_FONT4
@@ -393,6 +406,8 @@ lib_deps =
 	bodmer/TFT_eFEX@^0.0.8
 	losant/losant-mqtt-arduino@^2.0.1
 	fbiego/ESP32Time@^2.0.0
+	adafruit/Adafruit BME280 Library@^2.2.2
+	adafruit/Adafruit Unified Sensor@^1.1.6
 build_flags = 
 	${common.build_flags}
 	${disp-ILI9341.build_flags}
